--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'store/base.html' %}
+{% load static %}
+{% block content %}
     <table>
   <thead>
     <tr>
@@ -47,5 +43,4 @@
         </tr>
         </tbody>
     </table>
-</body>
-</html>
+{% endblock %}
